Add more content to header
added more content to the header and styled it. needs some more styling

--- a/index.html
+++ b/index.html
@@ -16,10 +16,27 @@
                 <li><a href="##"> Our Work </a></li>
                 <li><a href="##"> Donate </a></li>
             </ul>
-
+        </div>
         </div>
 
+    <div class="header2">
 
+        <div class="Info">
+            <div class="Info2">
+                <div class="text"><h1> Kalebalika </h1></div>
+                <div class="text">We are a youth empowerment organisation. We are everything
+                    youth!! </div>
+
+                    <button> Donate </button>
+            </div>
+            <div class="img">
+                <img src="###">
+            </div>
+        
+
+
+
+        </div>
     </div>
     
 </body>
