Add more style to the header.
added some more styles to the header and aligned the elements nicely.
also added an image and resized it so it doesnt spill out of the container.

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
         <div class="Info">
             <div class="Info2">
-                <div class="text"><h1> Kalebalika </h1></div>
+                <div class="heading"><h1> Kalebalika </h1></div>
                 <div class="text">We are a youth empowerment organisation. We are everything
                     youth!! </div>
 
-                    <button> Donate </button>
+                    <button> <a href="###"> Donate Now </a> </button>
             </div>
             <div class="img">
-                <img src="###">
+                <img src="HappyChildre.jpg">
             </div>
         
 
