finish header section
finished the header section. Might apply additional styling to make
perfect but at this point Ive done the necessary.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,23 @@
                 <img src="HappyChildre.jpg">
             </div>
         
+    <div class="ourWork">
 
+          <div class="text3"> Our Work </div>
+          <div class="imgCards">
+            <div class="image1"><img src="##"> This is image what what </div>
+
+
+
+
+          </div>
+
+
+
+    </div>
+
+
+    </div>
 
 
         </div>
