change/style  header,style and align footer
changed the color and style of the header adding some ribbon and also aligned and styled the footer a little bit

--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
             What you do makes a difference, and you have to decide what kind of difference you want to make.”
            </div> <div> — Jane Goodall </div>
     </div>
-    
+    <div class="footerContainer">
     <div class="footer"> 
         <div class="text6">Help a Cooperative recieve training in Sustainable development</div>
         <div class="button"><button>Donate Now </button></div>
 
+    </div>
     </div>
 </body>
 </html>
