Add Mission and Objectives
Added Mission and Objective to the about us section of the page.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
 
     <div class="header">
+        <div class="logoContainer">
         <div class="logo"> <img src="../Lubuto-Sustainable-Development/Media/logo.png"> </div>
+        <div class="name"> <h1> Lubuto Sustainable Development </h1> </div>
+        </div>
         <div class="links">
             <ul>
                 <li><a href="##"> About Us </a></li>
@@ -26,9 +29,17 @@
 
         <div class="Info">
             <div class="Info2">
-                <div class="heading"><h1> Lubuto Sustainable Development </h1></div>
-                <div class="text">We are a youth empowerment organisation. We are everything
-                    youth!! </div>
+                <div class="heading"><h1> Our Mission </h1></div>
+                
+                <div class="text"> To Promote and Educate DIfferent Communinities on Sustainable Development
+                    and management of natural resources. </div>
+                    <div class="heading2"><h2> Our Objective </h2></div>
+                    <div class="text"> We want to romote Sustainable Development and management of naturak resources
+                        by training and educating Women and youths. We aim to plant 1000 trees and more 
+                        every year.
+                        We also promote Sustainable agriculture and domestic tourism to improve 
+                        the standard of life in rural areas.
+                    </div>
 
                     <button> <a href="###"> Donate Now </a> </button>
             </div>
@@ -73,7 +84,8 @@
     </div>
     <div class="footerContainer">
     <div class="footer"> 
-        <div class="text6">Help a Cooperative recieve training in Sustainable development</div>
+        <div class="text6"> Help a Cooperative recieve training in Sustainable development</div>
+        <div class="text7"> We depend on the generosity of people like you who fund our work with monthly donations </div>
         <div class="button"><button>Donate Now </button></div>
 
     </div>
