--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
         <div class="Info">
             <div class="Info2">
-                <div class="heading"><h1> Our Mission </h1></div>
+                <div class="heading"><h1> Our Mission :</h1></div>
                 
                 <div class="text"> To Promote and Educate DIfferent Communinities on Sustainable Development
                     and management of natural resources. </div>
-                    <div class="heading2"><h2> Our Objective </h2></div>
+                    <div class="heading2"><h1> Our Objective :</h1></div>
                     <div class="text"> We want to romote Sustainable Development and management of naturak resources
                         by training and educating Women and youths. We aim to plant 1000 trees and more 
                         every year.
@@ -41,7 +41,7 @@
                         the standard of life in rural areas.
                     </div>
 
-                    <button> <a href="###"> Donate Now </a> </button>
+                    <button class="button"> <a href="###"> Donate Now </a> </button>
             </div>
             <div class="img">
                 <img src="../Lubuto-Sustainable-Development/Media/IMG-20230724-WA0000.jpg">
