--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="text"><p> To Promote and Educate DIfferent Communinities on Sustainable Development
                     and management of natural resources. </p> </div>
                     <div class="heading2"> <h1> Our Objective </h1></div>
-                    <div class="text"> <p> We want to romote Sustainable Development and management of naturak resources
+                    <div class="text"> <p> We want to promote Sustainable Development and management of naturak resources
                         by training and educating Women and youths. We aim to plant 1000 trees and more 
                         every year.
                         We also promote Sustainable agriculture and domestic tourism to improve 
@@ -82,12 +82,14 @@
             What you do makes a difference, and you have to decide what kind of difference you want to make.”
            </div> <div> — Jane Goodall </div>
     </div>
+    
     <div class="footerContainer">
     <div class="footer"> 
-        <div class="text6"> Help a Cooperative recieve training in Sustainable development</div>
-        <div class="text7"> We depend on the generosity of people like you who fund our work with monthly donations </div>
-        <div class="button"><button>Donate Now </button></div>
-
+        <div class="txtContainer">
+        <div class="text6"> <p> Help a Cooperative recieve training in Sustainable development</p> </div>
+        <div class="text7"> <p> We depend on the generosity of people like you who fund our work with monthly donations</p> </div>
+        </div>
+        <div class="button"> <button>Donate Now </button> </div>
     </div>
     </div>
 </body>
