Made site Mobile compatible
Managed to make the site mobile compatible however I will need to style the mobile version

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-    <div class="header">
+    <nav class="header">
         <div class="logoContainer">
         <div class="logo"> <img src="../Lubuto-Sustainable-Development/Media/logo.png"> </div>
         <div class="name"> <h1> Lubuto Sustainable Development </h1> </div>
@@ -24,6 +24,7 @@
             </ul>
         </div>
         </div>
+        </nav>
 
     <div class="header2">
 
@@ -48,8 +49,7 @@
             </div>
     </div>
         </div>
-    </div>
-
+    
     <div class="ourWork">
 
           <div class="text3"> <h1>Our Work</h1> </div>
