Align items in mobile view
styled and aligned header and headerr 2 content so that they are compatible for mobile
view

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 
     <nav class="header">
-        <div class="logoContainer">
-        <div class="logo"> <img src="../Lubuto-Sustainable-development/Media/logo.png"> </div>
-        <div class="name"> <h1> Lubuto Sustainable Development </h1> </div>
+        <div class="logoContainer" >
+        <div class="logo"> <img src="../Lubuto-Sustainable-Development/Media/logo.png"> </div>
+        <div class="name"> <h1> Lubuto for Sustainable Development </h1> </div>
         </div>
         <div class="links">
             <ul>
