--- a/index.html
+++ b/index.html
@@ -12,13 +12,27 @@
 
 
     <nav class="header">
+
         <div class="logoContainer" >
         <div class="logo"> <img src="../Lubuto-Sustainable-Development/Media/logo.png"> </div>
         <div class="name"> <h1> Lubuto for Sustainable Development </h1> </div>
         </div>
+
         <div class="links">
+
             <ul>
-                <li><a href="##"> About Us </a></li>
+                <li><a href="#"> Who We Are </a> 
+                    
+                    <ul class="dropdown">
+                        <li><a href="">Our Story</a></li>
+                        <li><a href="">Why Cooperatives </a></li>
+                        <li><a href="">Our Mission, Vision and Values</a></li>
+                        <li><a href="">Our Team</a></li>
+                        <li><a href="">Contact Us</a></li>
+                    </ul>
+                </li>
+
+
                 <li><a href="##"> Our Work </a></li>
                 <li><a href="##"> Donate </a></li>
             </ul>
