Change navbar links/add dropdown menu
changed the links and added another dropdown menu on the navigation bar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@
 
 
                 <li><a href="##"> Our Work </a></li>
-                <li><a href="##"> Donate </a></li>
+                <li><a href="##"> Get Involved </a>
+                    <ul class="dropdown2">
+                        <li><a href="">Donate</a></li>
+                        <li><a href="">Volunteer </a></li>
+                        <li> <a href=""> Request for A Training </a></li>
+                    <li> <a href="##"> Blog  </a> </li>
+                </ul>
+                </li>
             </ul>
         </div>
         </div>
