--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
         <header>
             <div class="container">
                 <div class="logo">
-                    <img src="Media/popo farmer.jpg">
+                    <img src="Media/logo.png" alt="KSD logo">
                 </div>
+                <nav>
+                    <ul>
+                        <li> <a href="#HomeSection"> Home </a></li>
+                        <li> <a href="Javascript:void(0);"> About Us </a></li>
+                        <li> <a href="Javascript:void(0);"> Our Work</a></li>
+                        <li> <a href="Javascript:void(0);"> Education </a></li>
+                        <li> <a href="Javascript:void(0);"> Gallery </a></li>
+                        <li> <a href="Javascript:void(0);"> Join Us</a></li>
+                    </ul>
+                </nav>
             </div>
         </header>
 
