--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="FullContainer banner" id="HomeSection">
+    <div class="fullContainer banner" id="HomeSection">
         <header>
             <div class="container">
                 <div class="logo">
