Add a background image to the banner

--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
                 </nav>
             </div>
         </header>
-
+        <div class="container">
+            <h1>We depend on your <span>generosity to keep us going </span> </h1>
+               <p> Agricultural cooperatives help farmers access the inputs required to grow 
+                    crops and keep livestock and help them process, transport and market their products.
+              </p>
+        </div>
+        <button> Contribute Here </button>
 
     </div>
 
