Start About Us section
started writing HTML code for the about US sections

--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
               </p>
               <button><a href="###"> Contribute Here </a> </button>
         </div>
-       
-
     </div>
+    <section class="fullContainer" id="AbtUsSection">
+        <div class="container">
+            <h2 class="SectionTitle"> About Us </h2>
+        </div>
+
+    </section>
 
 </body>
 </html>
