Add cards on the about us section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,31 @@
     <section class="fullContainer" id="AbtUsSection">
         <div class="container">
             <h2 class="SectionTitle"> About Us </h2>
-            <p> </p>
+            <p> We are a National Non-Governmental and Non Partisan organisation whose aim is to advocate for sustainable practices in the agriculture sector. By training Cooperatives, in enviromental sustainable farming, we promote the use of climate and enviroment friendly practices thereby contributing to the green economy, food securirty and water safety of Northern Province . Overral our focus is climate change and climate friendly farming.
+                Our Mission is to educate communities and cooperatives and farmer groups o sustainable development.
+                Our Motto: Shading more light sustainable development.
+            </p>
+            <div class="cards">
+
+                <div class="donationCard">
+                    <div class="title"> Give Donation </div>
+                    <p> We depend on your generosity to keep going.</p>
+                    <button class="DonateButton"><a href="##" >Donate Now </a></button>
+                </div>
+                 
+                <div class="VolunteerCard">
+                    <div class="title"> Volunteer </div>
+                    <p> There is strength in Unity.Together We Can Create Lasting Change"</p>
+                    <button class="DonateButton"><a href="##" >Volunteer Today! </a></button>
+                </div>
+                 
+                <div class="donationCard">
+                    <div class="title"> Give Donation </div>
+                    <p> We depend on your generosity to keep going.</p>
+                    <button class="DonateButton"><a href="##" >Donate Now </a></button>
+                </div>
+
+            </div>
         </div>
 
     </section>
