Add Link to AbtUsSection in Navigation Bar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <nav>
                     <ul>
                         <li> <a href="#HomeSection"> Home </a></li>
-                        <li> <a href="Javascript:void(0);"> About Us </a></li>
+                        <li> <a href="#AbtUsSection"> About Us </a></li>
                         <li> <a href="Javascript:void(0);"> Our Work</a></li>
                         <li> <a href="Javascript:void(0);"> Education </a></li>
                         <li> <a href="Javascript:void(0);"> Gallery </a></li>
@@ -44,21 +44,21 @@
             <div class="cards">
 
                 <div class="donationCard">
-                    <div class="title"> Give Donation </div>
+                    <div class="title"> Give A Donation </div>
                     <p> We depend on your generosity to keep going.</p>
                     <button class="DonateButton"><a href="##" >Donate Now </a></button>
                 </div>
                  
                 <div class="VolunteerCard">
-                    <div class="title"> Volunteer </div>
+                    <div class="title"> Become A Volunteer </div>
                     <p> There is strength in Unity.Together We Can Create Lasting Change"</p>
                     <button class="DonateButton"><a href="##" >Volunteer Today! </a></button>
                 </div>
                  
-                <div class="donationCard">
-                    <div class="title"> Give Donation </div>
-                    <p> We depend on your generosity to keep going.</p>
-                    <button class="DonateButton"><a href="##" >Donate Now </a></button>
+                <div class="SponsorshipCard">
+                    <div class="title"> Sponsor A Cooperative </div>
+                    <p>Invest in Impact, Your Sponsorship Drives Positive Change .</p>
+                    <button class="DonateButton"><a href="##" >Sponsor Here </a></button>
                 </div>
 
             </div>
