Create link to Our Work section in Navigation Bar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <ul>
                         <li> <a href="#HomeSection"> Home </a></li>
                         <li> <a href="#AbtUsSection"> About Us </a></li>
-                        <li> <a href="Javascript:void(0);"> Our Work</a></li>
+                        <li> <a href="#OurWorkSection"> Our Work</a></li>
                         <li> <a href="Javascript:void(0);"> Education </a></li>
                         <li> <a href="Javascript:void(0);"> Gallery </a></li>
                         <li> <a href="Javascript:void(0);"> Join Us</a></li>
