--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
 
     </section>
     <section class="OurWork" id="OurWorkSection">
+           <div class="container">
+            <h2 class="SectionTitle"> Our Work </h2>
 
+
+           </div>
     </section>
 
 </body>
