Create Box container Box container wil contain four boxes to depict our work.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
     <section class="OurWork" id="OurWorkSection">
            <div class="container">
             <h2 class="SectionTitle"> Our Work </h2>
+            <div class="boxContainer">
+                <div class="Box">
+                    <div class="ImageCard">
+                        <div class="WorkTitle">Educate and Train Groups/Communities on Sustainable Development </div>
+                        <div class="donationCount"> Donation Goal: <span> K20,000 </span></div>
+                        <button>Donate Now</button>
+                    </div>
+                </div>
+            </div>
 
 
            </div>
