Populate the boxes containing and depicting work

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
            <div class="container">
             <h2 class="SectionTitle"> Our Work </h2>
             <div class="boxContainer">
+
                 <div class="Box">
                     <div class="ImageCard">
                         <div class="WorkTitle">Educate and Train Groups/Communities on Sustainable Development </div>
@@ -76,6 +77,35 @@
                         <button> Donate Now </button>
                     </div>
                 </div>
+
+                <div class="Box">
+                    <div class="ImageCard">
+                        <div class="WorkTitle">Tree Planting </div>
+                        <div class="donationCount"> Tree Goal: <span> 10,000 Annualy </span></div>
+                        <button> Contribute Now </button>
+                    </div>
+                </div>
+
+                
+                <div class="Box">
+                    <div class="ImageCard">
+                        <div class="WorkTitle">Advocating For Sustainable Development </div>
+                        <div class="donationCount"> Donation Goal: <span> K20,000 </span></div>
+                        <button> Donate Now </button>
+                    </div>
+                </div>
+
+                
+                <div class="Box">
+                    <div class="ImageCard">
+                        <div class="WorkTitle">Climate Change Awareness </div>
+                        <div class="donationCount"> Donation Goal: <span>K20,000 </span></div>
+                        <button> Donate Now </button>
+                    </div>
+                </div>
+
+
+
             </div>
 
 
