Add Gallery Section to Page. Add Gallery section link to Navbar

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
                         <li> <a href="#HomeSection"> Home </a></li>
                         <li> <a href="#AbtUsSection"> About Us </a></li>
                         <li> <a href="#OurWorkSection"> Our Work</a></li>
-                        <li> <a href="Javascript:void(0);"> Education </a></li>
-                        <li> <a href="Javascript:void(0);"> Gallery </a></li>
+                        <li> <a href="#GallerySection"> Gallery </a></li>
                         <li> <a href="Javascript:void(0);"> Join Us</a></li>
                     </ul>
                 </nav>
@@ -107,6 +106,18 @@
 
 
            </div>
+    </section>
+    <section class="Gallery" id="GallerySection">
+        <div class="container">
+            <h2 class="SectionTitle"> Gallery </h2>
+            <div class="galleryContainer">
+                <div class="item"> 
+                    <span class="title">Image Title</span> <img src="Media/People picking ifishimu.jpg">
+                </div>
+        </div>
+        </div>
+
+
     </section>
 
 </body>
