Add images to image gallery section

--- a/index.html
+++ b/index.html
@@ -110,10 +110,39 @@
     <section class="Gallery" id="GallerySection">
         <div class="container">
             <h2 class="SectionTitle"> Gallery </h2>
+
+
             <div class="galleryContainer">
                 <div class="item"> 
-                    <span class="title">Image Title</span> <img src="Media/People picking ifishimu.jpg">
+                    <span class="title">Image Title</span>
+                     <img src="Media/People picking ifishimu.jpg">
                 </div>
+
+                <div class="item"> 
+                    <span class="title">Image Title</span>
+                     <img src="Media/IMG-20230724-WA0001.jpg">
+                </div>
+
+                <div class="item"> 
+                    <span class="title">Image Title</span>
+                     <img src="Media/IMG-20230724-WA0002.jpg">
+                </div>
+
+                <div class="item"> 
+                    <span class="title">Image Title</span>
+                     <img src="Media/Picking crops.jpg">
+                </div>
+
+                <div class="item"> 
+                    <span class="title">Image Title</span>
+                     <img src="Media/popo farmer.jpg">
+                </div>
+
+                <div class="item"> 
+                    <span class="title">Image Title</span>
+                     <img src="Media/IMG-20230724-WA0006.jpg">
+                </div>
+
         </div>
         </div>
 
