--- a/index.html
+++ b/index.html
@@ -117,17 +117,7 @@
                     <span class="title">Image Title</span>
                      <img src="Media/People picking ifishimu.jpg">
                 </div>
-
-                <div class="item"> 
-                    <span class="title">Image Title</span>
-                     <img src="Media/IMG-20230724-WA0001.jpg">
-                </div>
-
-                <div class="item"> 
-                    <span class="title">Image Title</span>
-                     <img src="Media/IMG-20230724-WA0002.jpg">
-                </div>
-
+                
                 <div class="item"> 
                     <span class="title">Image Title</span>
                      <img src="Media/Picking crops.jpg">
@@ -140,9 +130,18 @@
 
                 <div class="item"> 
                     <span class="title">Image Title</span>
-                     <img src="Media/IMG-20230724-WA0006.jpg">
+                     <img src="Media/people picking rice.jpg">
                 </div>
 
+                <div class="item"> 
+                    <span class="title">Image Title</span>
+                     <img src="Media/PlantingTrees.jpg">
+                </div>
+
+                <div class="item"> 
+                    <span class="title">Image Title</span>
+                     <img src="Media/HappyChildre.jpg">
+                </div>
         </div>
         </div>
 
