Add Join Us Section to page.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <li> <a href="#AbtUsSection"> About Us </a></li>
                         <li> <a href="#OurWorkSection"> Our Work</a></li>
                         <li> <a href="#GallerySection"> Gallery </a></li>
-                        <li> <a href="Javascript:void(0);"> Join Us</a></li>
+                        <li> <a href="#JoinUsSection"> Join Us</a></li>
                     </ul>
                 </nav>
             </div>
@@ -143,6 +143,14 @@
                      <img src="Media/HappyChildre.jpg">
                 </div>
         </div>
+        </div>
+
+
+    </section>
+    <section class="joinUs" id="#JoinUsSection"> 
+        <div class="container">
+            <div class="joinTitle"><span>Donate, Volunteer or Sponsor</span> a cooperative</div>
+            <p> </p>
         </div>
 
 
