--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </section>
     <section class="joinUs" id="#JoinUsSection"> 
         <div class="container">
-            <div class="joinTitle"><span>Donate, Volunteer or Sponsor</span> a cooperative</div>
+            <div class="joinTitle"><span>Donate, Volunteer</span> or <span>Sponsor</span> a cooperative</div>
             <p>You cannot get through a single day without having an impact on the world around you. 
                 What you do makes a difference, and you have to decide what kind of difference you want to make. </p>
                 <button> JOIN US </button>
