Create Footer Section

--- a/index.html
+++ b/index.html
@@ -152,11 +152,20 @@
             <div class="joinTitle"><span>Donate, Volunteer</span> or <span>Sponsor</span> a cooperative</div>
             <p>You cannot get through a single day without having an impact on the world around you. 
                 What you do makes a difference, and you have to decide what kind of difference you want to make. </p>
-                <button> JOIN US </button>
+                <button class="joinNow"> JOIN US </button>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container"> 
+            <div class="newsLetterContainer"></div>
+            <div class="linksContainer"></div>
+            <div class="connectWithUs"></div>
         </div>
 
 
-    </section>
+
+    </footer>
 
 </body>
 </html>
