Add News and input box to footer section

--- a/index.html
+++ b/index.html
@@ -158,7 +158,12 @@
 
     <footer>
         <div class="container"> 
-            <div class="newsLetterContainer"></div>
+            <div class="newsLetterContainer">
+                <img src="Media/logo.png" alt="Logo">
+                <p>Sign up with your email to recieve Monthly news update
+                     on our activities. </p>
+                     <input type="text" placeholder="Enter your email">
+            </div>
             <div class="linksContainer"></div>
             <div class="connectWithUs"></div>
         </div>
