add useful links to footer

--- a/index.html
+++ b/index.html
@@ -164,7 +164,16 @@
                      on our activities. </p>
                      <input type="text" placeholder="Enter your email">
             </div>
-            <div class="linksContainer"></div>
+            <div class="linksContainer">
+                <div class="title">Usefull Links </div>
+                <ul>
+                    <li> <a href="#HomeSection"> Home </a></li>
+                    <li> <a href="#AbtUsSection"> About Us </a></li>
+                    <li> <a href="#OurWorkSection"> Our Work</a></li>
+                    <li> <a href="#GallerySection"> Gallery </a></li>
+                    <li> <a href="#JoinUsSection"> Join Us</a></li>
+                </ul>
+            </div>
             <div class="connectWithUs"></div>
         </div>
 
