Add address and contact details to footer

--- a/index.html
+++ b/index.html
@@ -174,7 +174,17 @@
                     <li> <a href="#JoinUsSection"> Join Us</a></li>
                 </ul>
             </div>
-            <div class="connectWithUs"></div>
+            <div class="connectWithUs">
+                <div class="title"> Connect with us</div>
+                <p> Nsama Fisheries Compound<br />
+                    Nsama District<br />
+                    C/o Post Box 0006,<br />
+                    Nsama,<br />
+                    Northern Province.<br />
+                    </p>
+                    <p>Info@Kalebalika.org</p>
+                    <p>(+260)-978-000-000</p>
+            </div>
         </div>
 
 
