Finish styling footer

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 
     </section>
-    <section class="joinUs" id="#JoinUsSection"> 
+    <section class="joinUs" id="JoinUsSection"> 
         <div class="container">
             <div class="joinTitle"><span>Donate, Volunteer</span> or <span>Sponsor</span> a cooperative</div>
             <p>You cannot get through a single day without having an impact on the world around you. 
