Feat. Style modal content apply padding width border radious to modal content container

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="modal" id="donationModal"> 
-        <div class="modelContent">
+        <div class="modalContent">
             <span class="closeButton" id="closeModel">&times;</span>
             <div class="donationFormContainer">
                 <h1>Donate to Our cause</h1>
