--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="donationFormContainer">
                 <h1>Donate to Our cause</h1>
                 <form id="donationForm">
-                    <label for="donationAmount">Donation Amount:</label>
+                    <label for="donationAmount">Donation Amount(ZMW):</label>
                     <input type="number" class="donationAmount" name="donationAmount" min="1" required>
                     <label for="donorName">Your Name:</label>
                     <input type="input" name="donorName" name="donorName" required>
