Style input form and submission button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <input type="email" class="email" name="email" required>
                     <button class="submitButton">Submit</button>
                 </form>
-                <div class="confirmationMessage"></div>
+                <div class="confirmationMessage">Donation Successful</div>
             </div>
         </div>
     </div>
@@ -56,7 +56,7 @@
         
         <div class="container">
 
-            <h2 class="SectionTitle"> About Us </h2>
+            <h2 class="SectionTitle">About Us</h2>
             <p> We are a National Non-Governmental and Non Partisan organisation whose aim is to advocate for sustainable practices in the agriculture sector. By training Cooperatives, in enviromental sustainable farming, we promote the use of climate and enviroment friendly practices thereby contributing to the green economy, food securirty and water safety of Northern Province . Overral our focus is climate change and climate friendly farming.
                 Our Mission is to educate communities and cooperatives and farmer groups o sustainable development.
                 Our Motto: Shading more light sustainable development.
