feat:Open Modal with form modal with button click Create function to set display modal to flex

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                <p> Agricultural cooperatives help farmers access the inputs required to grow 
                     crops and keep livestock and help them process, transport and market their products.
               </p>
-              <button><a href="###"> Contribute Here </a> </button>
+              <button id="donateButton">Contribute Here</button>
         </div>
     </div>
 
     <div class="modal" id="donationModal"> 
         <div class="modalContent">
-            <span class="closeButton" id="closeModel">&times;</span>
+            <span class="closeButton" id="closeModal">&times;</span>
             <div class="donationFormContainer">
                 <h1>Donate to Our cause</h1>
                 <form id="donationForm">
@@ -211,6 +211,6 @@
 
 
     </footer>
-
+<script src="/script.js"></script>
 </body>
 </html>
