--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                 <h1>Donate to Our cause</h1>
                 <form id="donationForm">
                     <label for="donationAmount">Donation Amount(ZMW):</label>
-                    <input type="number" class="donationAmount" name="donationAmount" min="1" required>
+                    <input type="number" id="donationAmount" class="donationAmount" name="donationAmount" min="1" required>
                     <label for="donorName">Your Name:</label>
-                    <input type="input" name="donorName" name="donorName" required>
+                    <input type="input" id="donorName" name="donorName" name="donorName" required>
                     <label for="email">Your Email</label>
-                    <input type="email" class="email" name="email" required>
+                    <input type="email" id="donorEmail" class="email" name="email" required>
                     <button class="submitButton">Submit</button>
                 </form>
-                <div class="confirmationMessage">Donation Successful</div>
+                <div class="confirmationMessage"></div>
             </div>
         </div>
     </div>
