--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <input type="email" id="donorEmail" class="email" name="email" required>
                     <button class="submitButton">Submit</button>
                 </form>
-                <div class="confirmationMessage"></div>
+                <div id="confirmationMessage" class="confirmationMessage"></div>
             </div>
         </div>
     </div>
