Try onclick for mobile

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                <p> Agricultural cooperatives help farmers access the inputs required to grow 
                     crops and keep livestock and help them process, transport and market their products.
               </p>
-              <button id="donateButton">Contribute Here</button>
+              <button id="donateButton" onclick="displayDonateModal()">Contribute Here</button>
         </div>
     </div>
 
