add more fields

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                      <input type="number" id="donationAmount" class="donationAmount" name="donationAmount" min="1" required>
                     
                      <label for= "typeOfDonation" >Type Of Donation:</label>
-                     <select name="donationType" id="donationType" class="donationType">
+                     <select name="donationType" id="donationType" class="donationType dropdownS">
                             <option value="oneTimeDonation">One Time</option>
                             <option value="weeklyDonation">Weekly</option>
                             <option value="monthlyDonation">Monthly</option>
                     </select>
                     <label for= "methodOfPayment">Method of Payment:</label>
-                     <select name="methodOfPayment" id="paymentMethod" class="methodOfPayment">
+                     <select name="methodOfPayment" id="paymentMethod" class="methodOfPayment dropdownS">
                             <option value="creditCard">Credit Card</option>
                             <option value="payPal">PayPal</option>
                             <option value="airtelMoney">Airtel Money</option>
