add payment method options style payment method options

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                         <input type="input" id="firstName" name="firstName" name="firstName" placeholder="First Name">
                         <input type="input" id="lastName" name="lastName" name="lastName" placeholder="Last Name" required>
                         
-                        <label for="email">Your Email</label>
+                        <label for="email">Your Email:</label>
                         <input type="email" id="donorEmail" class="email" name="email" required>
-                        <label for="phoneNumber">Phone Number</label>
+                        <label for="phoneNumber">Phone Number:</label>
                         <input type="tel" id="phoneNumber" class="phoneNumber" name="phoneNumber" placeholder="##########">
                     
                       <label for="donationAmount">Donation Amount(ZMW):</label>
