Feat: User Schema
Create a ser schema in the database

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                         <label for="pwdConfirmation">Confirm Password:</label>
                         <input type="password" id="pwdConfirmation" name="pwd" required>
 
-                    <button type="submit" class="signUpButton">Submit</button>
+                    <button type="submit" class="signUpButton">Sign Up</button>
                 </form>
-                <div id="confirmationMessage" class="confirmationMessage"></div>
+                <div id="SignUpConfirmationMessage" class="confirmationMessage"> Good</div>
             </div>
         </div>
     </div>
